[workspace]

members = [
  "ex-1",
  "ex-2",
  "ex-3",
  "ex-4",
  "ex-6/ex-6-1-blocks-and-scopes",
  "ex-6/ex-6-2-if-expressions",
  "ex-6/ex-6-3-match-expressions",
  "ex-6/ex-6-4-loops",
  "ex-6/ex-6-5-break-and-continue",
  "ex-6/ex-6-6-functions",
  "ex-6/ex-6-7-macros",
  "ex-6/ex-6-8-collatz-sequence",
  "ex-8/ex-1-arrays",
  "ex-8/ex-2-tuples",
  "ex-8/ex-3-array-iterations",
  "ex-8/ex-4-patterns",
  "ex-8/ex-5-nested-arrays",
  "ex-9/ex-1-shared-references",
  "ex-9/ex-2-exclusive-references",
  "ex-9/ex-3-slices",
  "ex-9/ex-4-strings",
  "ex-9/ex-5-reference-validity",
  "ex-9/ex-6-geometry",
  "ex-10/ex-1-named-structs",
  "ex-10/ex-2-tuple-structs", "ex-10/ex-3-enums", "ex-10/ex-3-more", "ex-10/ex-4-type-aliases", "ex-10/ex-5-const", "ex-10/ex-6-static", "ex-10/ex-7-exercise", "ex-10/ex-7-exercise-ver2", "ex-12/ex-1-irrefutable-patterns", "ex-12/ex-2-matching-values", "ex-12/ex-3-destructuring-structs", "ex-12/ex-4-destructuring-enums", "ex-12/ex-5-1-if-let", "ex-12/ex-5-2-while-let", "ex-12/ex-5-3-let-else", "ex-12/ex-6-exercise", "ex-13/ex-1-methods", "ex-13/ex-2-1-traits", "ex-13/ex-2-2-supertraits", "ex-13/ex-2-3-associated-types", "ex-13/ex-3-deriving", "ex-13/ex-4-exercise", "ex-14/ex-1-generic-functions", "ex-14/ex-2-trait-bounds", "ex-14/ex-3-generic-data-types", "ex-14/ex-4-generic-traits", "ex-14/ex-5-impl-trait", "ex-14/ex-6-dyn-trait", "ex-14/ex-7-exercise-generic-min", "ex-16/ex-8-counter", "ex-17/ex-7-exercise-rot13", "ex-18/ex-1-closure-syntax", "ex-18/ex-2-capturing", "ex-18/ex-3-closure-traits",
]

resolver = "3"
